fix: fixed text overlapping the X button

--- a/frontend/src/components/Todo/style.css
+++ b/frontend/src/components/Todo/style.css
@@ -19,8 +19,13 @@
 }
 
 .todo p {
+    white-space: nowrap;
+    overflow: hidden;
+    display: block;
+    text-overflow: ellipsis;
     margin-left: 30px;
     position: relative;
+    max-width: 360px;
 }
 
 .todo p::after {
